# AlgoGraph

./: .gitignore  404.html  API_COMPARISON.md  ARCHITECTURAL_REVIEW.md  CLAUDE.md  DOCS_BUILD.md  DOCUMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  SHELL_IMPROVEMENTS.md  __init__.py  builder.py  edge.py  graph.py  graph_selectors.py  index.html  interop.py  mkdocs.yml  objects.inv  pyproject.toml  serialization.py  sitemap.xml  test_improvements.py  transformers.py  vertex.py  views.py
algorithms/: __init__.py  centrality.py  coloring.py  connectivity.py  flow.py  matching.py  shortest_path.py  spanning_tree.py  traversal.py
api/vertex/: index.html
contributing/: index.html
design/immutability/: index.html
docs/: README.md  contributing.md  index.md
docs/api/: vertex.md
docs/design/: immutability.md
docs/examples/: social-networks.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/shell/: overview.md
docs/user-guide/: algorithms.md  core-concepts.md  selectors.md  transformers.md  vertices.md  views.md
examples/: algorithm_examples.py  shell_demo.py  tree_graph_integration.py
examples/social-networks/: index.html
getting-started/examples/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
shell/: README.md  __init__.py  cli.py  commands.py  context.py  shell.py
shell/overview/: index.html
test/: test_algorithms.py  test_builder.py  test_interop.py  test_phase2_algorithms.py  test_phase3_coverage.py  test_phase3_features.py  test_shell.py
user-guide/algorithms/: index.html
user-guide/core-concepts/: index.html
user-guide/vertices/: index.html
