[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlgoGraph"
version = "2.0.0"
description = "Immutable graph library with 56+ algorithms, transformers, selectors, and lazy views"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
maintainers = [
    {name = "Alex Towell", email = "lex@metafunctor.com"}
]
keywords = ["graph", "algorithms", "data-structures", "immutable", "networkx", "graph-theory"]
authors = [
    {name = "Alex Towell", email = "lex@metafunctor.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
algotree = [
    "AlgoTree>=1.0",
]

[project.urls]
Homepage = "https://github.com/queelius/AlgoGraph"
Documentation = "https://queelius.github.io/AlgoGraph/"
Repository = "https://github.com/queelius/AlgoGraph"
"Bug Tracker" = "https://github.com/queelius/AlgoGraph/issues"
Changelog = "https://github.com/queelius/AlgoGraph/releases"

[project.scripts]
algograph = "AlgoGraph.shell.cli:main"

[tool.setuptools]
# The package is in the parent directory under the name "AlgoGraph"
packages = {find = {where = ["."], include = ["algorithms*", "shell*"]}}
py-modules = ["vertex", "edge", "graph", "builder", "serialization", "interop", "transformers", "graph_selectors", "views"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["AlgoGraph"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
